# search-archives-manuscrits

./: .gitignore  README.md  example.input.csv  example.output.csv  pyproject.toml
src/: advanced_search.py  clean_cote.py  css_selectors.py  main.py  search_result.py
tests/: clean_cote_test.py
