[project]
name = "searcham"
version = "0.1.0"
description = "Scraper for the BNF's Archives et Manuscrits advanced search."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "casanova>=2.0.2",
    "click>=8.2.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[project.scripts]
searcham = "src.main:cli"
